--- a/Portfolio-1/css/style.css
+++ b/Portfolio-1/css/style.css
@@ -9,3 +9,8 @@
     --text-black-900: #302e4d;
     --text-black-700: #504e70;
 }
+body{
+    line-height: 1.5;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+}
