--- a/Portfolio-1/css/style.css
+++ b/Portfolio-1/css/style.css
@@ -14,3 +14,10 @@ body{
     font-size: 16px;
     font-family: 'Poppins', sans-serif;
 }
+*{
+    margin: 0;
+    padding: 0;
+    outline: none;
+    text-decoration: none;
+    box-sizing: border-box;
+}
