--- a/Portfolio-1/css/style.css
+++ b/Portfolio-1/css/style.css
@@ -12,7 +12,7 @@
 body{
     line-height: 1.5;
     font-size: 16px;
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
 }
 *{
     margin: 0;
@@ -20,4 +20,16 @@ body{
     outline: none;
     text-decoration: none;
     box-sizing: border-box;
+}
+::before,::after{
+    box-sizing: border-box;
+}
+/* side-bar */
+.side-bar{
+    width: 270px;
+    background: var(--bg-black-100);
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10;
 }
