--- a/Portfolio-1/css/style.css
+++ b/Portfolio-1/css/style.css
@@ -12,7 +12,8 @@
 body{
     line-height: 1.5;
     font-size: 16px;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
+    
 }
 *{
     margin: 0;
@@ -43,5 +44,50 @@ body{
     left: 0;
     top: 0;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     z-index: 10;
+}
+.side-bar .logo{
+    position: absolute;
+    top: 50px;
+    font-size: 30px;
+    text-transform: capitalize;
+}
+.side-bar .logo a{
+    color: var(--text-black-900);
+    font-weight: 700;
+    padding: 15px 20px;
+    font-size: 30px;
+    letter-spacing: 5px;
+    position: relative;
+}
+.side-bar .logo a span{
+    font-family: "Clicker Script", cursive;
+    font-size: 40px;
+}
+.side-bar .logo a::before{
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-bottom: 5px solid var(--skin-color);
+    border-left: 5px solid var(--skin-color);
+    bottom: 0;
+    left: 0
+}
+.side-bar .logo a::after{
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-top: 5px solid var(--skin-color);
+    border-right: 5px solid var(--skin-color);
+    top: 0;
+    right: 0
+}
+
+.side-bar li{
+    list-style: none;
 }
