--- a/Portfolio-1/css/style.css
+++ b/Portfolio-1/css/style.css
@@ -44,6 +44,7 @@ body{
     left: 0;
     top: 0;
     height: 100%;
+    border-right: 1px solid var(--bg-black-50);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,4 +91,25 @@ body{
 
 .side-bar li{
     list-style: none;
+}
+.side-bar nav{
+    margin-top: 50px;
+}
+.side-bar .nav li{
+    margin-bottom: 20px;
+    display: block;
+}
+.side-bar .nav li a{
+    font-size: 16px;
+    font-weight: 600;
+    display: block;
+    border-bottom: 1px solid var(--bg-black-50);
+    color: var(--text-black-900);
+    padding: 5px 15px;
+}
+.side-bar .nav li a.active{
+    color: var(--skin-color);
+}
+.side-bar .nav li a i{
+    margin-right: 15px;
 }
