--- a/Portfolio-1/css/style.css
+++ b/Portfolio-1/css/style.css
@@ -22,6 +22,9 @@ body{
     text-decoration: none;
     box-sizing: border-box;
 }
+ul{
+    list-style: none;
+}
 ::before,::after{
     box-sizing: border-box;
 }
@@ -29,13 +32,17 @@ body{
     background: var(--bg-black-900);
     min-height: 100vh;
     display: block;
-    position: fixed;
-    left: 270px;
     padding: 0 30px;
+    /* position: fixed;
+    left: 270px;
+    
     top: 0;
     right: 0;
-    z-index: 0;
+    z-index: 0; */
     opacity: 1;
+}
+.main-content{
+    padding-left: 270px;
 }
 .padd-15{
     padding-left: 15px;
@@ -200,7 +207,34 @@ h3.my-profession{
     font-size: 20px;
     color: var(--text-black-700);
 }
-
+.home .home-img{
+    flex: 0 0 40%;
+    max-width: 40%;
+    text-align: center;
+    position: relative;
+}
+.home-img::after{
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    border-bottom: 10px solid var(--skin-color);
+    border-right: 10px solid var(--skin-color);
+    right: 20px;
+    bottom: -40px;
+}
+.home-img::before{
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    border-top: 10px solid var(--skin-color);
+    border-left: 10px solid var(--skin-color);
+    left: -20px;
+    top: -40px;
+}
 .home .home-img img{
+    margin: auto;
+    border-radius: 5px;
     height: 400px;
 }
