--- a/Portfolio-1/css/style.css
+++ b/Portfolio-1/css/style.css
@@ -97,6 +97,20 @@ ul{
     margin-right: -15px;
     position: relative;
 }
+.btn{
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 35px;
+    color: white;
+    border-radius: 40px;
+    display: inline-block;
+    white-space: nowrap;
+    background: var(--skin-color);
+    transition: all 0.3s ease;
+}
+.btn:hover{
+    transform: scale(1.05);
+}
 /* side-bar */
 .side-bar{
     width: 270px;
@@ -320,6 +334,9 @@ h3.my-profession{
     color: var(--text-black-700);
     margin-left: 4px;
     display: inline-block;
+}
+.about .about-content .personal-info .buttons{
+    margin-top: 30px;
 }
 .about .about-content .skills{
     flex: 0 0 40%;
