--- a/Portfolio-1/css/style.css
+++ b/Portfolio-1/css/style.css
@@ -498,12 +498,11 @@ h3.my-profession{
     color: var(--text-black-900);
     text-align: center;
     font-size: 15px;
-    margin-bottom: 15px;
     margin-bottom: 60px;
 }
 .contact .contact-info-item{
-    flex-direction: 0 0 25%;
-    max-width: 25%;
+    flex-direction: 0 0 35%;
+    max-width: 35%;
     text-align: center;
 }
 .contact .contact-info-item .icon{
@@ -548,7 +547,7 @@ h3.my-profession{
     background: var(--bg-black-100);
     border: 1px solid var(--bg-black-50);
     padding: 10px 25px;
-    font-size: 10px;
+    font-size: 16px;
     color: var(--text-black-700);
     transition: all 0.3s ease;
 }
@@ -558,7 +557,7 @@ h3.my-profession{
 .contact .contact-form .form-item textarea.form-control {
     height: 140px;
 }
-.contact .contact-form btn {
+.contact .contact-form .btn {
     height: 50px;
     padding: 0 50px;
 }
