--- a/Portfolio-1/css/style.css
+++ b/Portfolio-1/css/style.css
@@ -501,8 +501,8 @@ h3.my-profession{
     margin-bottom: 60px;
 }
 .contact .contact-info-item{
-    flex-direction: 0 0 35%;
-    max-width: 35%;
+    flex-direction: 0 0 25%;
+    max-width: 25%;
     text-align: center;
 }
 .contact .contact-info-item .icon{
@@ -560,4 +560,46 @@ h3.my-profession{
 .contact .contact-form .btn {
     height: 50px;
     padding: 0 50px;
+}
+
+/* Responsive */
+@media (max-width:1199px) {
+    .side-bar {
+        left: -270px;
+    }
+    .main-content {
+        padding-left: 0;
+    }
+    .about .about-content .personal-info .info-item p span {
+        display: block;
+        margin-left: 0;
+    }
+}
+@media (max-width:991px){
+    .contact .contact-info-item,
+    .portfolio .portfolio-item,
+    .service .service-item {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .home .home-info {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .home .home-img {
+        display: none;
+    }
+}
+@media (max-width:767px){
+    .contact .contact-form .col-6,
+    .contact .contact-info-item,
+    .portfolio .portfolio-item,
+    /* .service .service-item, */
+    .about .about-content .experience,
+    .about .about-content .education,
+    .avout .about-content .skills,
+    .about .about-content .personal-info {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
