--- a/Portfolio-1/css/style-switcher.css
+++ b/Portfolio-1/css/style-switcher.css
@@ -11,9 +11,9 @@
     transition: all 0.3s ease;
     transform: translateX(100%);
 }
-.style-switcher.open {[
+.style-switcher.open {
     transform: translateX(-25px);
-]}
+}
 .style-switcher .s-icon {
     position: absolute;
     height: 40px;
@@ -54,7 +54,7 @@
     height: 30px;
     width: 30px;
     border-radius: 50%;
-    border: 1px solid red;
+    
 }
 .style-switcher .color-1 {
     background: #ec1839;
