--- a/Portfolio-1/css/style.css
+++ b/Portfolio-1/css/style.css
@@ -103,6 +103,8 @@ ul{
     margin-left: -15px;
     margin-right: -15px;
     position: relative;
+    justify-content: center;
+    align-items: center;
 }
 .btn{
     font-size: 16px;
